# casacoretables

./: .gitignore  AGENTS.md  CMakeLists.txt  PROMPTS.md  README.md  pyproject.toml
.github/workflows/: black.yml  cpp-tests.yml  python-publish-cpp.yml  python-testing-linux.yml  python-testing-macos.yml
bindings/: CMakeLists.txt  casters.h  convert.cc  convert.h  module.cc
docs/: casacoretables_api_tour.ipynb
src/casacoretables/: __init__.py
src/casacoretables/tables/: __init__.py  table.py  tablecolumn.py  tablehelper.py  tableindex.py  tableiter.py  tablerow.py  tableutil.py
src/casacoretables/util/: __init__.py  substitute.py
tests/cpp/: CMakeLists.txt  run_assay.sh
tests/python/: test_table.py  test_threadsafety.py  test_unicode.py  test_util.py
